--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "numpy>=1.24.0,<2.0.0",
     "insightface>=0.7.0",
     "onnxruntime-gpu>=1.8.0",
-    "pyyaml>=6.0"
+    "pyyaml>=6.0",
+    "scikit-learn>=1.2.0",
+    "matplotlib>=3.6.0"
 ]
 
 [project.optional-dependencies]
